[package]
name = "super-blank-project"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.4"
panic-halt = "0.2.0"
rp2040-hal = "0.7.0"
embedded-time = "0.12.1"
rp2040-boot2 = "0.2.1"

[build-dependencies]
cortex-m-rtic = "0.5.7"

[[bin]]
name = "sort_example"
path = "src/main.rs"
